chore: fix content width on mobile

--- a/src/pages/book/components/modal-qr-form/ModalQRForm.scss
+++ b/src/pages/book/components/modal-qr-form/ModalQRForm.scss
@@ -6,9 +6,9 @@
   position: fixed;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 56px;
   border-radius: 12px 12px 0 0;
-  width: max-content;
+  width: 100%;
   height: max-content;
   box-shadow: 0 0 32px v.$color-shadow-modal;
   background-color: v.$color-background-modal;
@@ -56,6 +56,7 @@
 
   &__cards {
     overflow-y: auto;
+    width: 100%;
     max-height: 327px;
     -ms-overflow-style: none; /* for Internet Explorer и Edge */
     scrollbar-width: none; /* for Firefox */
@@ -84,16 +85,17 @@
 
   &__print-button-container {
     display: grid; /* TODO: in Button component remove flex: 1; and do here display: flex; */
-    justify-content: center;
     border-top: 1px solid v.$color-component-border;
-    padding: 24px 0;
+    padding: 24px 32px;
     width: 100%;
     height: 92px;
+
+    @include m.tablet {
+      justify-content: center;
+    }
   }
 
   &__print-button {
-    min-width: 311px;
-
     @include m.tablet {
       min-width: 100px;
     }
@@ -102,15 +104,16 @@
   @include m.tablet {
     position: relative;
     border-radius: 12px;
+    width: max-content;
     animation: unset;
-
-    &--closing {
-      animation: unset;
-    }
   }
 
   &--closing {
     animation: slideDown 0.4s ease-out forwards;
+
+    @include m.tablet {
+      animation: unset;
+    }
   }
 }
 
